--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <div class="footer-about">
             <h3>RaydenVortex</h3>
             <p>
-                Being different is strength, and that strength is art.
+                Being different is strength, and that strength is argot.
             </p>
             <div class="social-links">
               <a href="#">
@@ -317,4 +317,5 @@
 
     <script src="js/script.js"></script>
   </body>
+
 </html>
