--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="nav-links desktop-nav">
             <a href="#home">Home</a>
             <a href="#profile">Profile</a>
-            <a href="#team">Our Team</a>
+            <a href="#team">Shoutout</a>
             <a href="#contact">Contact</a>
           </div>
           
@@ -41,7 +41,7 @@
           <div class="mobile-nav">
             <a href="#home">Home</a>
             <a href="#profile">Profile</a>
-            <a href="#team">Shoutout</a>
+            <a href="#Shoutout">Shoutout</a>
             <a href="#contact">Contact</a>
           </div>
         </div>
